test/parser/datatypes-missing-constructor.b3.expect
Error:
5: datatype NoCtorName = (x: int)
                         ^
expected a identifier start character

